--- a/index.html
+++ b/index.html
@@ -14,14 +14,18 @@
 	<header>
 	<div class="contenedor-menu" id="js-contenedor-menu"><!--Contenedor menú-->
 		<div class="container">
-				<figure class="figure-logo">
-					<!--Cambia el link a tu web-->
-					<a href="/">
-						<img src="images/logo.png" alt="Logo" title="Logo">
-					</a>
-				</figure>
-				<div class="ico-menu">
-					<img src="images/ico-menu.png" alt="Menú">
+				<div class="contenedor-ico ico-menu-center">
+					<span class="contenedor-logo">
+						<figure class="figure-logo">
+						<!--Cambia el link a tu web-->
+						<a href="/">
+							<img src="images/logo.png" alt="Logo" title="Logo">
+						</a>
+						</figure>
+					</span>
+					<div class="ico-menu">
+						<img src="images/ico-menu.png" alt="Menú">
+					</div>
 				</div>
 				<nav class="main-menu">
 					<ul class="menu">
