--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<header>
 	<div class="contenedor-menu" id="js-contenedor-menu"><!--Contenedor menú-->
 		<div class="container">
-				<div class="contenedor-ico" id="js-contenedor-ico">
+				<div class="contenedor-ico"><!--Aquí colocar las clases de como mostrar el icono del menú-->
 					<span class="contenedor-logo" id="js-contenedor-logo">
 						<figure class="figure-logo">
 						<!--Cambia el link a tu web-->
@@ -30,7 +30,7 @@
 					</div>
 				</div>
 				<nav class="main-menu">
-					<ul class="menu">
+					<ul class="menu list-left">
 						<li class="active">
 							<a href="#">Home</a>
 						</li>
@@ -56,6 +56,7 @@
 				</nav>
 		</div>
 	</div> <!--Fin contenedor menú-->
+
 
 	</header>
 	<section class="container well presentacion">
