menú web lince v. 1.0
subiendo archivos del menú web lince

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header>
-	<div class="contenedor-menu" id="js-contenedor-menu"><!--Contenedor menú-->
+	<nav class="contenedor-menu" id="js-contenedor-menu"><!--Contenedor menú-->
 		<div class="container">
 				<div class="contenedor-ico"><!--Aquí colocar las clases de como mostrar el icono del menú-->
 					<span class="contenedor-logo" id="js-contenedor-logo">
@@ -30,7 +30,7 @@
 					</div>
 				</div>
 				<nav class="main-menu">
-					<ul class="menu list-left">
+					<ul class="menu">
 						<li class="active">
 							<a href="#">Home</a>
 						</li>
@@ -55,7 +55,7 @@
 					</ul>
 				</nav>
 		</div>
-	</div> <!--Fin contenedor menú-->
+	</nav> <!--Fin contenedor menú-->
 
 
 	</header>
