menú web lince v. 1.0
subiendo menú web lince

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<header>
 	<nav class="contenedor-menu" id="js-contenedor-menu"><!--Contenedor menú-->
 		<div class="container">
-				<div class="contenedor-ico"><!--Aquí colocar las clases de como mostrar el icono del menú-->
+				<div class="contenedor-ico ico-menu-center"><!--Aquí colocar las clases de como mostrar el icono del menú-->
 					<span class="contenedor-logo" id="js-contenedor-logo">
 						<figure class="figure-logo">
 						<!--Cambia el link a tu web-->
