Web Menú Lince v. 1.0
Subiendo los archivos para la app Web Menú Lince.

--- a/index.html
+++ b/index.html
@@ -30,14 +30,20 @@
 		font-size: 1.5em;
 		font-weight: normal;
 	}
+	.box{
+		padding: 3em 0;
+		border-top: 3px dotted #1D1D1D;
+	}
+	.box:first-child{
+		border-top: 0;
+	}
 	</style>
 </head>
 <body id="home">
-<header>
 <nav class="contenedor-menu" id="js-contenedor-menu"><!--contenedor menú-->
   <div class="container"><!--sirve solo para bootstrap-->
     <div class="contenedor-iconos"><!--aquí va la clase de como se mostrara el icono menú móvil-->
-      <span class="contenedor-logo" id="js-contenedor-logo"><!--contenedor logo-->
+      <span class="contenedor-logo-nameapp" id="js-contenedor-logo-nameapp"><!--contenedor logo-->
       	<!--<span class="name-app">Menú Web Lince</span>--> <!--activarlo si van a usar el nombre de la app-->
       	<figure class="figure-logo">
           <a href="#home"><!--cambia el link a tu web-->
@@ -45,29 +51,32 @@
           </a>
         </figure>
       </span><!--fin contenedor logo-->
+
       <div class="icono-menu-movil" id="js-icono-menu-movil"> <!--contenedor icono menú móvil-->
         <img src="images/ico-menu.png" alt="Menú"> <!--imagen icono menú móvil-->
       </div><!--fin contenedor icono menú móvil-->
     </div>
   <div class="box-main-menu"><!--clase utilizada en js-->
-    <ul class="menu"> <!--colocar la clase de como se mostrara lo items del menú-->
+
+    <ul class="menu list-center">
+
       <li class="active"><!--clase active se usa para resaltar el item seleccionado del menú-->
-        <a href="#home">Home</a>
+        <a href="#home" data-scroll data-options='{ "easing": "easeOutCubic" }'>Home</a>
       </li>
       <li>
-        <a href="#html">HTML</a>
+        <a href="#uso" data-scroll data-options='{ "easing": "easeOutCubic" }'>Uso</a>
       </li>
       <li>
-        <a href="#css">CSS</a>
+        <a href="#html" data-scroll data-options='{ "easing": "easeOutCubic" }'>HTML</a>
       </li>
       <li>
-        <a href="#less">LESS</a>
+        <a href="#css" data-scroll data-options='{ "easing": "easeOutCubic" }'>CSS</a>
       </li>
       <li>
-        <a href="#javascript">JavaScript</a>
+        <a href="#less" data-scroll data-options='{ "easing": "easeOutCubic" }'>LESS</a>
       </li>
       <li>
-        <a href="#uso">Uso</a>
+        <a href="#javascript" data-scroll data-options='{ "easing": "easeOutCubic" }'>JavaScript</a>
       </li>
     </ul>
   </div>
@@ -75,18 +84,137 @@
 </nav> <!--fin contenedor menú-->
 </header>
 <section class="container well presentacion">
-	<h1>Menú Web Lince</h1>
+	<h1><strong>Menú Web Lince</strong></h1>
 	<p class="text-presentacion">Menú desarrollado para que ahorren el tiempo que toma hacerlo, ya que tendrán una idea de como comenzar.</p>
 </section>
 <article class="container">
-<div id="html">
+<div class="box" id="uso">
+	<h2>Uso</h2>
+	<ol>
+		<li>
+			<p>Para implementar <strong>Menú Web Lince</strong> en nuestro proyecto, simplemente copiamos el código <strong><a href="#html">HTML</a></strong> y agregamos la ruta al archivo <strong><a href="#css">CSS</a></strong>.</p>
+		</li>
+		<li>
+			<p>Para que el archivo <strong><a href="#javascript">JavaScript</a></strong> funcione correctamente, es necesario agregar la librería de <strong><a href="https://jquery.com/download/" target="_blank">jQuery</a></strong>.</p>
+		</li>
+	</ol>
+	<h2>Menú con el name app</h2>
+	<p>Para usar el menú con el nombre de la aplicación, lo configuramos de la siguiente manera.</p>
+	<h3>Código</h3>
+	<p>Código por defecto.</p>
+	<img src="images/code_default.png">
+	<p>Descomenta la etiqueta <code>span</code> que contiene el texto <strong>Menú Web Lince</strong>.</p>
+	<p>Y elimina toda la etiqueta <code>figure</code>.</p>
+	<img src="images/code_name_app.png">
+	<h4>Apariencia</h4>
+	<img src="images/menu_name_app.png">
+	<br>
+	<br>
+	<hr>
+	<br>
+	<br>
+
+	<h2>Clases para equipos móviles</h2>
+	<p><strong>Menú Web Lince</strong> toma mas importancia a la apariencia para equipos móviles, para ello implementamos algunas clases.</p>
+
+	<h3>Por defecto</h3>
+	<p>Esta apariencia se muestra por defecto.</p>
+	<h4>Código</h4>
+	<p>Esta clase biene por defecto.</p>
+	<img src="images/menu_movil/menu_movil_code.png">
+	<h4>Apariencia</h4>
+	<img src="images/menu_movil/menu_movil.png">
+	
+	<br>
+	<br>
+	<hr>
+	<br>
+	<br>
+
+	<h3>Icono de menú web móvil a la izquierda</h3>
+	<p>Para poder mostrar esa apariencia solo agregamos la siguiente clase.</p>
+	<p><code>icono-menu-movil-left</code></p>
+	<h4>Códgio</h4>
+	<img src="images/menu_movil/menu_movil_left_code.png">
+	<h4>Apariencia</h4>
+	<img src="images/menu_movil/menu_movil_left.png">
+	
+	<br>
+	<br>
+	<hr>
+	<br>
+	<br>
+
+	<h3>Icono del menú al centro</h3>
+	<p>Para poder mostrar esta apariencia solo agregamos la siguiente clase.</p>
+	<p><code>icono-menu-movil-center</code></p>
+	<h4>Código</h4>
+	<img src="images/menu_movil/menu_movil_center_code.png">
+	<h4>Apariencia</h4>
+	<img src="images/menu_movil/menu_movil_center.png">
+	<p>Al realizar <code>scroll</code> la apariencia es la siguiente.</p>
+	<img src="images/menu_movil/menu_movil_center_scroll.png">
+
+	<br>
+	<br>
+	<hr>
+	<br>
+	<br>
+
+	<h2>Tipos de listas Menú Web Lince</h2>
+	<h3>Por defecto</h3>
+	<h4>Código</h4>
+	<img src="images/list_menu/list_default_code.png">
+	<h4>Apariencia</h4>
+	<img src="images/list_menu/list_default.png">
+	
+	<br>
+	<hr>
+	<br>
+
+	<h3>Lista left</h3>
+	<h4>Código</h4>
+	<p><code>list-left</code></p>
+	<img src="images/list_menu/list_left_code.png">
+	<h4>Apariencia</h4>
+	<img src="images/list_menu/list_left.png">
+	
+	<br>
+	<hr>
+	<br>
+
+	<h3>Lista right</h3>
+	<h4>Código</h4>
+	<p><code>list-right</code></p>
+	<img src="images/list_menu/list_right_code.png">
+	<h4>Apariencia</h4>
+	<img src="images/list_menu/list_right.png">
+	
+	<br>
+	<hr>
+	<br>
+
+	<h3>Lista center</h3>
+	<h4>Código</h4>
+	<p><code>list-center</code></p>
+	<img src="images/list_menu/list_center_code.png">
+	<h4>Apariencia</h4>
+	<img src="images/list_menu/list_center.png">
+	
+	<br>
+	<hr>
+	<br>
+
+</div>
+<div class="box" id="html">
 <h2>Código HTML para el <strong>Menú Web Lince</strong></h2>
-<p>Código <strong>HTML</strong> limpio sin comentarios de ayuda, para ver la ayuda tiene que editar el el archivo <code>index.html</code>.</p>
+<p>Código <strong>HTML</strong> limpio sin comentarios de ayuda, para ver la ayuda tienes que abrir el el archivo <code>index.html</code> con un editor de codigo como <a href="https://www.sublimetext.com/3" target="_blank"><strong>Sublime Text</strong></a> por ejemplo.</p>
 
 <pre><code>&#60;nav class="contenedor-menu" id="js-contenedor-menu"&#62;
   &#60;div class="container"&#62;&#60;!--sirve solo para bootstrap--&#62;
-    &#60;div class="contenedor-iconos"&#62;
-      &#60;span class="contenedor-logo" id="js-contenedor-logo"&#62;
+    &#60;div class="contenedor-iconos"&#62;&#60;!--aquí va la clase de como se mostrara el icono menú móvil : icono-menu-movil-left o icono-menu-movil-center --&#62;
+      &#60;span class="contenedor-logo-nameapp" id="js-contenedor-logo-nameapp"&#62;
+      &#60;!--&#60;span class="name-app"&#62;Menú Web Lince&#60;/span&#62;--> &#60;!--Descomentarlo si van a usar el nombre de la app--&#62;
       	&#60;figure class="figure-logo"&#62;
           &#60;a href="#home"&#62;
 	        &#60;img src="images/logo.png" alt="Logo" title="Logo"&#62;
@@ -124,130 +252,132 @@
 </pre>
 
 </div>
-<div id="css">
-	<h2>Estilos <strong>CSS</strong></h2>
+<div class="box" id="css">
+	<h2><strong>CSS</strong></h2>
 	<p>Para esta pequeña aplicación he utilizado los media queries de bootstrap</p>
+	<p>Eres libre de usar tus propias media queries.</p>
+	<br>
+	<p>Media queries para Tablets.</p>
 	<pre><code>@media (min-width: 768px) and (max-width: 991px){}</code></pre>
+	<p>Media queries para smartphones.</p>
 	<pre><code>@media (max-width: 767px){}</code></pre>
 </div>	
 
-<div id="less">
+<div class="box" id="less">
 	<h2><strong>LESS</strong></h2>
 	<p>Este proyecto tiene tres archivos <strong>LESS</strong> con los siguientes nombres (<code>main.less</code>, <code>estilos.less</code>, <code>variables.less</code>).</p>
-	<p><strong><code>main.less</code></strong>: este archivo como su nombre lo dice es el principal.</p>
-
-	<p><strong><code>estilos.less</code></strong>: este archivo contiene todos los estilos.</p>
-
-	<p><strong><code>variables.less</code></strong>: este archivo contiene todas las variables.</p>
+	<ul>
+		<li>
+			<p><strong><code>main.less</code></strong>: este archivo como su nombre lo dice es el principal.</p>
+		</li>
+		<li>
+			<p><strong><code>estilos.less</code></strong>: este archivo contiene todos los estilos.</p>
+		</li>
+		<li>
+			<p><strong><code>variables.less</code></strong>: este archivo contiene todas las variables.</p>
+		</li>
+	</ul>
+	
 <h4>Compilar de LESS a CSS</h4>
 <p>Hay muchas formas de compilar archivos <strong>LESS</strong> a <strong>CSS</strong>, para facilitar las cosas utilizaremos una apliación.</p>
 <p>En mi caso utilizare <a href="http://winless.org/">WinLess</a>, ya que uso el <strong>sistema operativo Windows</strong>, si usas otro sistema operativo solo te bastara buscar un poco.</p>
-<h4>Variables LESS.</h4>
-<pre><code>//variables
-@bg-menu: lighten(#008C69, 10%);
 
-//name app
-@color-text-name-app: #242424;
-@fz-text-name-app: 2em;
-
-//logo
-//cambiar la variable si quiere modificar el tamaño por defecto, afecta a todo el menú web tenga cuidado
-@altura-logo: 45px; 
-@ancho-logo: @altura-logo; //ancho del logo
-
-//variables para desktop
-@altura-menu: @altura-logo; //altura del menú web
-
-//link
-@color-text-link: #1F1F1F; //color de texto por defecto item del menú
-@fz-link: 14px; // tamaño del texto para los item del menú
-@padding-link: ((@altura-logo / 2) - 12.5) 20px; //padding de los link
-@size-border-top: 4px; //tamaño borde top cuando cuando se pasa el mouse
-@color-border-top: #FFFF42; //color borde top cuando cuando se pasa el mouse
-@color-text-hover: #fff; //color de texto para hover
-@text-color-active: #fff; //color del texto cuando se aplica la clase active
-
-/*variables para icono-menu-center*/
-@altura-contenedor-iconos: 45px; //altura del contenedor de iconos
-@height-menu: 82px; //altura inicial
-@altura-menu-movil-scroll: 45px; //altura cuando el usuario hace scroll
-//alto y ancho del logo para móvil
-@altura-logo-movil: 45px;
-@ancho-logo-movil: 45px;
-
-@padding-link-movil: 10px 20px; //padding para los link menú web
-
-//color del borde del icono del menú móvil
-@color-borde-icono: #606060;</code></pre>
+<p>Abrimos la aplicación <strong>WinLess</strong>, presionamos en el botón <strong>Add folder</strong>, seleccionar solo al archivo <code>main.less</code> como en la imagen y presionar el botón <strong>Compile</strong>.</p>
+<img src="images/winless.png" alt="">
 </div>
 
-<div id="javascript">
+<div class="box" id="javascript">
 	<h2><strong>JavaScript</strong></h2>
-	<p>Utilize <a href="http://code.jquery.com/jquery-1.12.0.min.js" target="_blank"><code>jQuery</code></a> para que funcione.</p>
+	<p>Utilize <a href="http://code.jquery.com/jquery-1.12.0.min.js" target="_blank">jQuery</a> para que funcione correctamente.</p>
 	<p>Código Javacript para el <strong>Menú Web Lince</strong>.</p>
-
 	<pre><code>$(document).ready(function(){
-	var menu = $('.box-main-menu');
+	var list_menu = $('.box-main-menu'),
+		menu_fijo = $('#js-contenedor-menu'),
+		menu_offset = menu_fijo.offset();
 	/*
-	Esta línea de código llama a la función de la libreria scrollToFixed
+	Esta función sirve para que cuando el usuario haga click en el botón de Menú Web se despliegue o repliegue.
 	----
-	Sirve para que el menú se quede fijo
-	*/
-	$('#js-contenedor-menu').scrollToFixed();
-
-	/*
-	Esta función sirve para que cuando el usuario haga click en el botón de menú se despliegue o repliegue.
-	----
-	Se podra apreciar en pantallas menores a 768px
+	Solo se podrá apreciar en pantallas menores a 768px
 	*/
 	$('#js-icono-menu-movil').on('click',function(e){
 		e.preventDefault();
-		menu.slideToggle();                 
+		list_menu.slideToggle();                 
 	});
 
-	//Esta función sirve para validar cuando el navegador, es cambiado de tamaño manualmente.
+	//resize sirve para validar cuando el navegador es cambiado de tamaño manualmente.
 	$(window).resize(function() {
-		//esta condición sirve para mostrar el menú si esta oculto.
-		//cuando la pantalla sea mayor a 768px
+		/*
+		esta condición sirve para mostrar el menú si esta oculto.
+		---------
+		cuando la pantalla sea mayor a 768px
+		*/
 		var w = $(window).width();
-		if (w > 768 && menu.is(':hidden')) {
-			menu.removeAttr('style');
+		if (w > 768 && list_menu.is(':hidden')) {
+			list_menu.removeAttr('style');
 		};
 	});
 
-	var scroleo = function(ancho){
-		if($(window).scrollTop() > 1) {
-			if(ancho >= 768 && ancho <= 991){
-				$('#js-contenedor-menu #js-contenedor-logo').addClass('hide-logo');
-			}
-			if(ancho <= 767){
-				$('#js-contenedor-menu .icono-menu-movil-center').addClass('hide-logo height-menu');
-			}
-		} else{
-			if(ancho >= 768 && ancho <= 991){
-				$('#js-contenedor-menu #js-contenedor-logo').removeClass('hide-logo');
-			}
-			if(ancho <= 767){
-				$('#js-contenedor-menu .icono-menu-movil-center').removeClass('hide-logo height-menu');
-			}
-		}
-	};
 
 	$(window).on('scroll', function() {
+		//========== Menú fijo ===========
+		/*
+			Cuando el usuario haga scroll automáticamente el menú web se quedara estático
+		*/
+		if($(window).scrollTop() > menu_offset.top) {
+		  menu_fijo.addClass('menu-fijo');
+		} else {
+		  menu_fijo.removeClass('menu-fijo');
+		}
+
 		var ancho = $(window).width();
 		scroleo(ancho)
-		//Esta función sirve para validar cuando el navegador, es cambiado de tamaño manualmente. 
+
+		//resize sirve para validar cuando el navegador es cambiado de tamaño manualmente. 
 		$(window).resize(function() {
 			var ancho = $(window).width();
 			scroleo(ancho);
 		});
 	});
+
+	var scroleo = function(ancho){
+		if($(window).scrollTop() > 1) {
+			//Esta condición se cumple si la pantalla es mayor o igual a 768px y menor o igual a 991px
+			if(ancho >= 768 && ancho <= 991){
+				/**
+				Si la condición se cumple agregamos la clase hide-logo
+				**/
+				$('#js-contenedor-menu #js-contenedor-logo-nameapp').addClass('hide-logo');
+			}
+			/*
+			Esta condición se cumple si el contenedor con la clase contenedor-iconos tiene al lado clase icono-menu-movil-center
+			--------
+			y la pantalla sea menor o igual a 767
+			*/
+			if(ancho <= 767){
+				/**
+				Si la condición se cumple agregamos las clases hide-logo height-menu
+				**/
+				$('#js-contenedor-menu .icono-menu-movil-center').addClass('hide-logo height-menu');
+			}
+		} else{
+			/**
+				Si no se cumple removemos la clase hide-logo
+			**/
+			if(ancho >= 768 && ancho <= 991){
+				$('#js-contenedor-menu #js-contenedor-logo-nameapp').removeClass('hide-logo');
+			}
+
+			/**
+				Si no se cumple removemos las clases hide-logo y height-menu
+			**/
+			if(ancho <= 767){
+				$('#js-contenedor-menu .icono-menu-movil-center').removeClass('hide-logo height-menu');
+			}
+		}
+	};
 });</code></pre>
 </div>
-
-<div id="uso">
-	<h2>Como implementar en un proyecto</h2>
-</div>	
+	
 </article>
 	<footer class="container-fluid well">
 		<div class="container">
@@ -274,6 +404,22 @@
 	<script src="js/libs/jquery.min.js"></script>
 	<script src="js/libs/jquery-scrolltofixed-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
+	<script src="js/libs/smoothscroll.js" type="text/javascript"></script>
+	<script>
+		//===  SMOOTH SCROLL   ====
+		smoothScroll.init({
+			speed: 1000,
+			easing: 'easeInOutCubic',
+			offset: 0,
+			updateURL: false,
+			callbackBefore: function ( toggle, anchor ) {},
+			callbackAfter: function ( toggle, anchor ) {}
+		});
+		//https://highlightjs.org/
+		 $('pre code').each(function(i, block) {
+		    hljs.highlightBlock(block);
+		 });
+	</script>
 	<script src="js/main.js"></script>
 </body>
 </html>
