Menú Web Lince v. 1.0
Subir index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
   <div class="box-main-menu"><!--clase utilizada en js-->
 
-    <ul class="menu list-center">
+    <ul class="menu">
 
       <li class="active"><!--clase active se usa para resaltar el item seleccionado del menú-->
         <a href="#home" data-scroll data-options='{ "easing": "easeOutCubic" }'>Home</a>
