Menú Web Lince v. 1.0
subiendo archivo index.html corregido el link de autor

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 			<div class="row">
 				<div class="col-lg-4">
 					<h2>Autor</h2>
-					<a href="http://01luisren.com" target="_blank">01luisrene</a>
+					<a href="http://01luisrene.com" target="_blank">01luisrene</a>
 				</div>
 				<div class="col-lg-4">
 					<h2>Redes sociales</h2>
