Web Menú Lince v. 1.1
subiendo archivos del Menú Web Lince versión 1.1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<!--Importante para visualización en web móvil-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="application-name" content=">Menú Web Lince v1.0"/>
+	<meta name="application-name" content=">Menú Web Lince v1.1"/>
 	<title>Menú Web Lince</title>
 	<!--Usaremos bootstrap para dar una agradable apariencia al diseño-->
 	<link rel="stylesheet" href="css/libs/bootstrap.min.css">
@@ -42,8 +42,9 @@
 <body id="home">
 <nav class="contenedor-menu" id="js-contenedor-menu"><!--contenedor menú-->
   <div class="container"><!--sirve solo para bootstrap-->
-    <div class="contenedor-iconos"><!--aquí va la clase de como se mostrara el icono menú móvil-->
-      <span class="contenedor-logo-nameapp" id="js-contenedor-logo-nameapp"><!--contenedor logo-->
+    <div class="contenedor-ico-nameapp"><!--aquí va la clase de como se mostrara el icono menú móvil-->
+      <span class="logo-nameapp" id="js-logo-nameapp"><!--contenedor logo-->
+
       	<!--<span class="name-app">Menú Web Lince</span>--> <!--activarlo si van a usar el nombre de la app-->
       	<figure class="figure-logo">
           <a href="#home"><!--cambia el link a tu web-->
@@ -86,6 +87,7 @@
 <section class="container well presentacion">
 	<h1><strong>Menú Web Lince</strong></h1>
 	<p class="text-presentacion">Menú desarrollado para que ahorren el tiempo que toma hacerlo, ya que tendrán una idea de como comenzar.</p>
+	
 </section>
 <article class="container">
 <div class="box" id="uso">
@@ -102,10 +104,23 @@
 	<p>Para usar el menú con el nombre de la aplicación, lo configuramos de la siguiente manera.</p>
 	<h3>Código</h3>
 	<p>Código por defecto.</p>
-	<img src="images/code_default.png">
+
+<pre><code>&#60;span class="contenedor-logo-nameapp" id="js-contenedor-logo-nameapp"&#62;&#60;!--contenedor logo--&#62;
+  &#60;!--&#60;span class="name-app"&#62;Menú Web Lince&#60;/span&#62;--&#62; &#60;!--activarlo si van a usar el nombre de la app--&#62;
+  &#60;figure class="figure-logo"&#62;
+    &#60;a href="#home"&#62;&#60;!--cambia el link a tu web--&#62;
+      &#60;img src="images/logo.png" alt="Logo" title="Logo"&#62;&#60;!--ruta de tu logo img--&#62;
+    &#60;/a&#62;
+  &#60;/figure&#62;
+&#60;/span&#62;&#60;!--fin contenedor logo--&#62;</code></pre>
+
 	<p>Descomenta la etiqueta <code>span</code> que contiene el texto <strong>Menú Web Lince</strong>.</p>
 	<p>Y elimina toda la etiqueta <code>figure</code>.</p>
-	<img src="images/code_name_app.png">
+
+<pre><code>&#60;span class="contenedor-logo-nameapp" id="js-contenedor-logo-nameapp"&#62;&#60;!--contenedor logo--&#62;
+  &#60;span class="name-app"&#62;Menú Web Lince&#60;/span&#62;
+&#60;/span&#62;&#60;!--fin contenedor logo--&#62;</code></pre>
+
 	<h4>Apariencia</h4>
 	<img src="images/menu_name_app.png">
 	<br>
@@ -115,13 +130,13 @@
 	<br>
 
 	<h2>Clases para equipos móviles</h2>
-	<p><strong>Menú Web Lince</strong> toma mas importancia a la apariencia para equipos móviles, para ello implementamos algunas clases.</p>
+	<p><strong>Menú Web Lince</strong> toma más importancia a la apariencia para equipos móviles, para ello implementamos algunas clases.</p>
 
 	<h3>Por defecto</h3>
 	<p>Esta apariencia se muestra por defecto.</p>
 	<h4>Código</h4>
-	<p>Esta clase biene por defecto.</p>
-	<img src="images/menu_movil/menu_movil_code.png">
+	<p>Esta clase viene por defecto.</p>
+	<pre><code>&#60;div class="contenedor-ico-nameapp"&#62;</code></pre>
 	<h4>Apariencia</h4>
 	<img src="images/menu_movil/menu_movil.png">
 	
@@ -134,8 +149,8 @@
 	<h3>Icono de menú web móvil a la izquierda</h3>
 	<p>Para poder mostrar esa apariencia solo agregamos la siguiente clase.</p>
 	<p><code>icono-menu-movil-left</code></p>
-	<h4>Códgio</h4>
-	<img src="images/menu_movil/menu_movil_left_code.png">
+	<h4>Código</h4>
+	<pre><code>&#60;div class="contenedor-ico-nameapp icono-menu-movil-left"&#62;</code></pre>
 	<h4>Apariencia</h4>
 	<img src="images/menu_movil/menu_movil_left.png">
 	
@@ -149,7 +164,7 @@
 	<p>Para poder mostrar esta apariencia solo agregamos la siguiente clase.</p>
 	<p><code>icono-menu-movil-center</code></p>
 	<h4>Código</h4>
-	<img src="images/menu_movil/menu_movil_center_code.png">
+	<pre><code>&#60;div class="contenedor-ico-nameapp icono-menu-movil-center"&#62;</code></pre>
 	<h4>Apariencia</h4>
 	<img src="images/menu_movil/menu_movil_center.png">
 	<p>Al realizar <code>scroll</code> la apariencia es la siguiente.</p>
@@ -208,12 +223,12 @@
 </div>
 <div class="box" id="html">
 <h2>Código HTML para el <strong>Menú Web Lince</strong></h2>
-<p>Código <strong>HTML</strong> limpio sin comentarios de ayuda, para ver la ayuda tienes que abrir el el archivo <code>index.html</code> con un editor de codigo como <a href="https://www.sublimetext.com/3" target="_blank"><strong>Sublime Text</strong></a> por ejemplo.</p>
+<p>Código <strong>HTML</strong> limpio sin comentarios de ayuda, para ver la ayuda tienes que abrir el el archivo <code>index.html</code> con un editor de código como <a href="https://www.sublimetext.com/3" target="_blank"><strong>Sublime Text</strong></a> por ejemplo.</p>
 
 <pre><code>&#60;nav class="contenedor-menu" id="js-contenedor-menu"&#62;
   &#60;div class="container"&#62;&#60;!--sirve solo para bootstrap--&#62;
-    &#60;div class="contenedor-iconos"&#62;&#60;!--aquí va la clase de como se mostrara el icono menú móvil : icono-menu-movil-left o icono-menu-movil-center --&#62;
-      &#60;span class="contenedor-logo-nameapp" id="js-contenedor-logo-nameapp"&#62;
+    &#60;div class="contenedor-ico-nameapp"&#62;&#60;!--aquí va la clase de como se mostrara el icono menú móvil : icono-menu-movil-left o icono-menu-movil-center --&#62;
+      &#60;span class="logo-nameapp" id="js-logo-nameapp"&#62;
       &#60;!--&#60;span class="name-app"&#62;Menú Web Lince&#60;/span&#62;--> &#60;!--Descomentarlo si van a usar el nombre de la app--&#62;
       	&#60;figure class="figure-logo"&#62;
           &#60;a href="#home"&#62;
@@ -254,6 +269,11 @@
 </div>
 <div class="box" id="css">
 	<h2><strong>CSS</strong></h2>
+	<p>Agregamos el link a nuestro archivo css.</p>
+	<pre><code>&#60;link rel="stylesheet" href="css/main.min.css"&#62;</code></pre>
+
+	<h3>Media Queries Usados</h3>
+
 	<p>Para esta pequeña aplicación he utilizado los media queries de bootstrap</p>
 	<p>Eres libre de usar tus propias media queries.</p>
 	<br>
@@ -274,12 +294,12 @@
 			<p><strong><code>estilos.less</code></strong>: este archivo contiene todos los estilos.</p>
 		</li>
 		<li>
-			<p><strong><code>variables.less</code></strong>: este archivo contiene todas las variables.</p>
+			<p><strong><code>variables.less</code></strong>: este archivo contiene todas las variables (si deseas cambiar su apariencia del menú en su mayoría cambia las variables ten cuidado por favor).</p>
 		</li>
 	</ul>
 	
 <h4>Compilar de LESS a CSS</h4>
-<p>Hay muchas formas de compilar archivos <strong>LESS</strong> a <strong>CSS</strong>, para facilitar las cosas utilizaremos una apliación.</p>
+<p>Hay muchas formas de compilar archivos <strong>LESS</strong> a <strong>CSS</strong>, para facilitar las cosas utilizaremos una aplicación.</p>
 <p>En mi caso utilizare <a href="http://winless.org/">WinLess</a>, ya que uso el <strong>sistema operativo Windows</strong>, si usas otro sistema operativo solo te bastara buscar un poco.</p>
 
 <p>Abrimos la aplicación <strong>WinLess</strong>, presionamos en el botón <strong>Add folder</strong>, seleccionar solo al archivo <code>main.less</code> como en la imagen y presionar el botón <strong>Compile</strong>.</p>
@@ -290,92 +310,134 @@
 	<h2><strong>JavaScript</strong></h2>
 	<p>Utilize <a href="http://code.jquery.com/jquery-1.12.0.min.js" target="_blank">jQuery</a> para que funcione correctamente.</p>
 	<p>Código Javacript para el <strong>Menú Web Lince</strong>.</p>
-	<pre><code>$(document).ready(function(){
-	var list_menu = $('.box-main-menu'),
+	<pre><code>'use strict';
+var a_view = $(window).width(),
+		list_menu = $('.box-main-menu'),
 		menu_fijo = $('#js-contenedor-menu'),
-		menu_offset = menu_fijo.offset();
-	/*
-	Esta función sirve para que cuando el usuario haga click en el botón de Menú Web se despliegue o repliegue.
-	----
-	Solo se podrá apreciar en pantallas menores a 768px
-	*/
-	$('#js-icono-menu-movil').on('click',function(e){
-		e.preventDefault();
-		list_menu.slideToggle();                 
-	});
+		menu_offset = menu_fijo.offset(),
+		logo_tablet = $('#js-contenedor-menu #js-logo-nameapp'),
+		logo_smartphone = $('#js-contenedor-menu .icono-menu-movil-center');
 
-	//resize sirve para validar cuando el navegador es cambiado de tamaño manualmente.
-	$(window).resize(function() {
-		/*
-		esta condición sirve para mostrar el menú si esta oculto.
-		---------
-		cuando la pantalla sea mayor a 768px
-		*/
-		var w = $(window).width();
-		if (w > 768 && list_menu.is(':hidden')) {
-			list_menu.removeAttr('style');
-		};
-	});
+var menuWebLince = (function ($) {
 
+	 //======= Función para Menú fijo =======
+	var	menu_movil_fijo = function(){
 
-	$(window).on('scroll', function() {
-		//========== Menú fijo ===========
-		/*
-			Cuando el usuario haga scroll automáticamente el menú web se quedara estático
-		*/
 		if($(window).scrollTop() > menu_offset.top) {
 		  menu_fijo.addClass('menu-fijo');
 		} else {
 		  menu_fijo.removeClass('menu-fijo');
 		}
 
-		var ancho = $(window).width();
-		scroleo(ancho)
-
-		//resize sirve para validar cuando el navegador es cambiado de tamaño manualmente. 
-		$(window).resize(function() {
-			var ancho = $(window).width();
-			scroleo(ancho);
+	},
+	//======= Función Menú: Sirve para desplegar o replegar el menú en equipos móviles =======
+	toggle_menu = function(){
+		$('#js-icono-menu-movil').on('click',function(e){
+			e.preventDefault();
+			list_menu.slideToggle();                 
 		});
-	});
-
-	var scroleo = function(ancho){
-		if($(window).scrollTop() > 1) {
-			//Esta condición se cumple si la pantalla es mayor o igual a 768px y menor o igual a 991px
-			if(ancho >= 768 && ancho <= 991){
-				/**
-				Si la condición se cumple agregamos la clase hide-logo
-				**/
-				$('#js-contenedor-menu #js-contenedor-logo-nameapp').addClass('hide-logo');
-			}
-			/*
-			Esta condición se cumple si el contenedor con la clase contenedor-iconos tiene al lado clase icono-menu-movil-center
+	},
+	//======= Esta función sirve para mostrar el menú, cuando el usuario repliega el menú con la función toggle_menu =======
+	mostrar_menu = function() {
+		/*
+			Esta condición se cumple cuando la pantalla sea mayor a 768px
 			--------
-			y la pantalla sea menor o igual a 767
-			*/
-			if(ancho <= 767){
-				/**
-				Si la condición se cumple agregamos las clases hide-logo height-menu
-				**/
-				$('#js-contenedor-menu .icono-menu-movil-center').addClass('hide-logo height-menu');
-			}
-		} else{
-			/**
-				Si no se cumple removemos la clase hide-logo
-			**/
-			if(ancho >= 768 && ancho <= 991){
-				$('#js-contenedor-menu #js-contenedor-logo-nameapp').removeClass('hide-logo');
-			}
+			y es usado solo en el evento resize de la función g_function_nav
+		*/
+		var w = $(window).width();
+		if (w > 768 && list_menu.is(':hidden')) {
+			list_menu.removeAttr('style');
+		};
+	},
+	//======= Función creada para agregar o eliminar clases, según sus condiciones internas =======
+	cond_nav = function(ancho){
+		if(ancho >= 768 && ancho <= 991){
 
-			/**
-				Si no se cumple removemos las clases hide-logo y height-menu
-			**/
+			logo_tablet.addClass('hide-logo');
+
+		}else
+		{
+			logo_tablet.removeClass('hide-logo');
+		}
+
+		if(ancho <= 767){
+		
+			logo_smartphone.addClass('hide-logo height-menu');
+
+		}else{
+
+			logo_smartphone.removeClass('hide-logo height-menu');
+		}
+	},
+		//======= Función creada para agregar o eliminar clases, según sus condiciones internas y el scrollTop sea mayor a 1px =======
+	cond_nav_scroll = function(ancho){
+		
+			if($(window).scrollTop() > 1){
+			if(ancho >= 768 && ancho <= 991){
+				logo_tablet.addClass('hide-logo');
+			}
 			if(ancho <= 767){
-				$('#js-contenedor-menu .icono-menu-movil-center').removeClass('hide-logo height-menu');
+				logo_smartphone.addClass('hide-logo height-menu');
+			}
+			
+		}else{
+			if(ancho >= 768 && ancho <= 991){
+				logo_tablet.removeClass('hide-logo');
+			}
+			if(ancho <= 767){
+				logo_smartphone.removeClass('hide-logo height-menu');
 			}
 		}
-	};
-});</code></pre>
+	},
+	//======= Función global del menú web =======
+	g_function_nav = function(){
+		cond_nav(a_view);
+		cond_nav_scroll(a_view);
+
+		$(window).on('resize', function(){
+			var a_r = $(this).width();
+
+			//======= Mostrar menú web =======
+			mostrar_menu();
+
+			if($(window).scrollTop() > 1){
+				cond_nav(a_r);
+			}
+
+			$(window).on('scroll', function(){
+				cond_nav_scroll(a_r);
+			});
+		});
+	},
+	//======= Función scroll del menú web =======
+	scroll_nav = function(){
+		$(window).on('scroll', function() {
+			//====== Función cond_nav_scroll =======
+			cond_nav_scroll(a_view);
+
+			//======= Función de menú fijo
+			menu_movil_fijo();
+
+		});
+	},
+  // MenuWebLince javascripts inicialización
+  init = function () {
+    menu_movil_fijo();
+    toggle_menu();
+    g_function_nav();
+    scroll_nav();
+
+  };
+
+  return {
+      init: init
+  };
+
+})(jQuery);
+
+(function () {
+    menuWebLince.init();
+})();</code></pre>
 </div>
 	
 </article>
