Web Menú Lince v. 1.1
subiendo archivos del menú

--- a/index.html
+++ b/index.html
@@ -269,7 +269,9 @@
 </div>
 <div class="box" id="css">
 	<h2><strong>CSS</strong></h2>
-	<p>Agregamos el link a nuestro archivo css.</p>
+	<p>Primero agregamos el link al  framework Bootstrap.</p>
+	<pre><code>&#60;link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"&#62;</code></pre>
+	<p>Y luego agregamos el link a nuestro archivo css.</p>
 	<pre><code>&#60;link rel="stylesheet" href="css/main.min.css"&#62;</code></pre>
 
 	<h3>Media Queries Usados</h3>
@@ -309,6 +311,9 @@
 <div class="box" id="javascript">
 	<h2><strong>JavaScript</strong></h2>
 	<p>Utilize <a href="http://code.jquery.com/jquery-1.12.0.min.js" target="_blank">jQuery</a> para que funcione correctamente.</p>
+
+	<pre><code>&#60;script src="https://code.jquery.com/jquery-1.12.0.min.js"&#62;&#60;/script&#62;</code></pre>
+
 	<p>Código Javacript para el <strong>Menú Web Lince</strong>.</p>
 	<pre><code>'use strict';
 var a_view = $(window).width(),
