Web Menú Lince v. 1.1
Archivos del menú agregados

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<!--Importante para visualización en web móvil-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="application-name" content=">Menú Web Lince v1.1"/>
+	<meta name="description" content="Menú desarrollado para que ahorren el tiempo que toma hacerlo, ya que tendrán una idea de como comenzar.">
+	<meta name="application-name" content="Menú Web Lince v1.1"/>
 	<title>Menú Web Lince</title>
 	<!--Usaremos bootstrap para dar una agradable apariencia al diseño-->
 	<link rel="stylesheet" href="css/libs/bootstrap.min.css">
@@ -59,7 +60,7 @@
     </div>
   <div class="box-main-menu"><!--clase utilizada en js-->
 
-    <ul class="menu">
+    <ul class="menu"><!--Colocar la clase para la apariencia deseada-->
 
       <li class="active"><!--clase active se usa para resaltar el item seleccionado del menú-->
         <a href="#home" data-scroll data-options='{ "easing": "easeOutCubic" }'>Home</a>
@@ -86,7 +87,7 @@
 </header>
 <section class="container well presentacion">
 	<h1><strong>Menú Web Lince</strong></h1>
-	<p class="text-presentacion">Menú desarrollado para que ahorren el tiempo que toma hacerlo, ya que tendrán una idea de como comenzar.</p>
+	<p class="text-presentacion">El Menú desarrollado les permitirá ahorrar tiempo que lleva en realizarlo, brindando ideas de como empezar.</p>
 	
 </section>
 <article class="container">
@@ -101,7 +102,7 @@
 		</li>
 	</ol>
 	<h2>Menú con el name app</h2>
-	<p>Para usar el menú con el nombre de la aplicación, lo configuramos de la siguiente manera.</p>
+	<p>Para usar el menú con el nombre de la aplicación lo configuramos de la siguiente manera.</p>
 	<h3>Código</h3>
 	<p>Código por defecto.</p>
 
@@ -276,12 +277,12 @@
 
 	<h3>Media Queries Usados</h3>
 
-	<p>Para esta pequeña aplicación he utilizado los media queries de bootstrap</p>
-	<p>Eres libre de usar tus propias media queries.</p>
+	<p>Para esta pequeña aplicación he utilizado los Media Queries de Bootstrap</p>
+	<p>Eres libre de usar tus propias Media Queries.</p>
 	<br>
-	<p>Media queries para Tablets.</p>
+	<p>Media Queries para Tablets.</p>
 	<pre><code>@media (min-width: 768px) and (max-width: 991px){}</code></pre>
-	<p>Media queries para smartphones.</p>
+	<p>Media Queries para smartphones.</p>
 	<pre><code>@media (max-width: 767px){}</code></pre>
 </div>	
 
